Hide keyboard on outside tap
Signed-off-by: Abdullah Al Hadi <hadi.cuet@gmail.com>

--- a/RentProduct/RentProduct/Base.lproj/Main.storyboard
+++ b/RentProduct/RentProduct/Base.lproj/Main.storyboard
@@ -21,6 +21,23 @@
                                 <rect key="frame" x="0.0" y="91" width="390" height="655"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                             </tableView>
+                            <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xgH-rZ-EQW">
+                                <rect key="frame" x="0.0" y="91" width="390" height="655"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="No item found to show." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Wol-fI-yf4">
+                                        <rect key="frame" x="20" y="315.66666666666669" width="350" height="24"/>
+                                        <fontDescription key="fontDescription" style="UICTFontTextStyleTitle3"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstItem="Wol-fI-yf4" firstAttribute="centerY" secondItem="xgH-rZ-EQW" secondAttribute="centerY" id="19c-Vg-roS"/>
+                                    <constraint firstItem="Wol-fI-yf4" firstAttribute="leading" secondItem="xgH-rZ-EQW" secondAttribute="leading" constant="20" id="APJ-Ms-h83"/>
+                                    <constraint firstAttribute="trailing" secondItem="Wol-fI-yf4" secondAttribute="trailing" constant="20" id="l5N-dB-0Yb"/>
+                                </constraints>
+                            </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pS6-zc-wch">
                                 <rect key="frame" x="0.0" y="746" width="390" height="64"/>
                                 <subviews>
@@ -83,17 +100,22 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="pS6-zc-wch" firstAttribute="top" secondItem="YER-zB-zt9" secondAttribute="bottom" id="2JN-aC-GkK"/>
+                            <constraint firstItem="xgH-rZ-EQW" firstAttribute="trailing" secondItem="YER-zB-zt9" secondAttribute="trailing" id="9b1-i2-Wuy"/>
+                            <constraint firstItem="xgH-rZ-EQW" firstAttribute="leading" secondItem="YER-zB-zt9" secondAttribute="leading" id="AHq-oU-BHp"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="pS6-zc-wch" secondAttribute="bottom" id="Ed8-v7-nVp"/>
                             <constraint firstItem="YER-zB-zt9" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="Ltt-LF-WmV"/>
+                            <constraint firstItem="xgH-rZ-EQW" firstAttribute="top" secondItem="YER-zB-zt9" secondAttribute="top" id="QEE-M8-F1H"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="pS6-zc-wch" secondAttribute="trailing" id="fkj-1X-tWf"/>
                             <constraint firstItem="pS6-zc-wch" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="gBM-fB-Y2I"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="YER-zB-zt9" secondAttribute="trailing" id="geX-3i-r6d"/>
+                            <constraint firstItem="xgH-rZ-EQW" firstAttribute="bottom" secondItem="YER-zB-zt9" secondAttribute="bottom" id="oFn-3x-sAb"/>
                             <constraint firstItem="YER-zB-zt9" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="vxy-iN-A1g"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="0rb-Zv-Cfg"/>
                     <connections>
                         <outlet property="bookButton" destination="gMX-lX-pn0" id="Rgi-dV-E8W"/>
+                        <outlet property="noItemView" destination="xgH-rZ-EQW" id="4t5-Tk-4Ax"/>
                         <outlet property="productTableView" destination="YER-zB-zt9" id="z7F-dd-udb"/>
                         <outlet property="returnButton" destination="YEh-7r-1oK" id="skm-i8-NgF"/>
                     </connections>
